--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -664,7 +664,7 @@ CDAEs are symmetric: a stack of convolutional layers in the encoder are applied 
 	\label{fig:convtranspose}
 \end{figure}
 
-To describe convolutional layers, \textcite{convguide} state that ``images, sound clips and many other similar kinds of data have an intrinsic structure,'' and share the following properties:
+To describe convolutional layers, \textcite[6]{convguide} state that ``images, sound clips and many other similar kinds of data have an intrinsic structure,'' and share the following properties:
 
 \begin{tight_enumerate}
 	\item
