--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -232,7 +232,7 @@ title = {Frequency difference limens for short‐duration tones},
 journal = {The Journal of the Acoustical Society of America},
 volume = {54},
 number = {3},
-pages = {610-619},
+pages = {610--619},
 year = {1973},
 doi = {10.1121/1.1913640},
 URL = {https://doi.org/10.1121/1.1913640},
@@ -595,6 +595,7 @@ year = {2019},
 title = {Fourier at the heart of computer music: From harmonic sounds to texture},
 volume = {20},
 journal = {Comptes Rendus Physique},
+pages = {461--473},
 doi = {10.1016/j.crhy.2019.07.005},
 url = {https://hal.archives-ouvertes.fr/hal-02283200/file/Fourier_at_the_heart_of_computer_music__from_harmonic_sounds_to_textures%20%281%29.pdf}
 }
@@ -659,7 +660,6 @@ journal = {Computing in Science and Engineering - C in S\&E}
 @article{korpel,
 author = {A. Korpel},
 journal = {Appl. Opt.},
-keywords = {Associative memory; Fourier transforms; Holography; Phase conjugation; Quantum electronics; Spatial frequency},
 number = {20},
 pages = {3624--3632},
 publisher = {OSA},
@@ -727,11 +727,13 @@ doi = {10.1109/EURCON.2007.4400546}}
 author = {Maclennan, Bruce},
 year = {1994},
 title = {Gabor Representations of Spatiotemporal Visual Images},
+pages = {101--148},
 url = {http://www.its.caltech.edu/~matilde/GaborLocalization.pdf}}
 
 @article{doerflersouls,
 author = {Evangelista, Gianpaolo and Doerfler, Monika and Matusiak, Ewa},
 year = {2013},
+pages = {91--118},
 title = {Arbitrary Phase Vocoders by means of Warping},
 volume = {7},
 journal = {Musica e Tecnologia},
@@ -881,11 +883,11 @@ journal = {Methods in molecular biology (Clifton, N.J.)},
 doi = {10.1007/978-1-62703-748-8_7}
 }
 
-@inbook{introtodl,
+@book{introtodl,
 author = {II, Taweh},
 year = {2017},
-pages = {1-9},
-title = {Introduction to Deep Learning},
+publisher = {Apress},
+title = {Introduction to Deep Learning in R},
 isbn = {978-1-4842-2733-6},
 doi = {10.1007/978-1-4842-2734-3_1}
 }
